testdata/result/query/bad_select_order.sql.txt
--- bad_select_order.sql
select 1 order x asc

--- Error
syntax error: testdata/input/query/bad_select_order.sql:1:16: expected token: BY, but: <ident>

  1:  select 1 order x asc
                     ^


--- AST
&ast.QueryStatement{
  Hint:  (*ast.Hint)(nil),
  With:  (*ast.With)(nil),
  Query: &ast.BadNode{
    NodePos: 0,
    NodeEnd: 20,
    Raw:     "select 1 order x asc",
  },
}

--- SQL
select 1 order x asc
